add more html & css until cta of hero page

--- a/css/style.css
+++ b/css/style.css
@@ -30,16 +30,146 @@
   0% {
     transform: translateY(50px); } }
 
+@keyframes topMove {
+  0% {
+    transform: translateX(0); }
+  100% {
+    transform: translateX(-210px); } }
+
+@keyframes bottomMove {
+  0% {
+    transform: translateX(0); }
+  100% {
+    transform: translateX(200px); } }
+
+@keyframes leftMove {
+  0% {
+    transform: translateY(0); }
+  100% {
+    transform: translateY(210px); } }
+
+@keyframes rightMove {
+  0% {
+    transform: translateY(0); }
+  100% {
+    transform: translateY(-210px); } }
+
+@keyframes diamondrotate2 {
+  100% {
+    transform: rotate(-180deg); } }
+
+@keyframes infiniteRotation {
+  0% {
+    transform: rotate(-180deg); }
+  10% {
+    transform: rotate(-90deg); }
+  25% {
+    transform: rotate(-90deg); }
+  35% {
+    transform: rotate(0deg); }
+  50% {
+    transform: rotate(0deg); }
+  60% {
+    transform: rotate(90deg); }
+  75% {
+    transform: rotate(90deg); }
+  90% {
+    transform: rotate(180deg); }
+  100% {
+    transform: rotate(180deg); } }
+
+@keyframes wordsOpacity {
+  0% {
+    opacity: 0; }
+  100% {
+    opacity: 1; } }
+
+.header {
+  display: flex;
+  width: 100%; }
+  .header__logo {
+    width: 100%;
+    height: 10px;
+    margin-top: 50px;
+    background: url("../assets/logo.png");
+    background-repeat: no-repeat;
+    background-position: center; }
+    @media (min-width: 700px) {
+      .header__logo {
+        background-position: left;
+        margin-left: 50px; } }
+
 .hero {
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-wrap: wrap;
   width: 100%;
   height: 100vh; }
+  .hero .hero__lines {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin-top: -140px;
+    margin-left: -140px;
+    width: 280px;
+    height: 280px;
+    font-family: "Open Sans", sans-serif;
+    font-weight: 300;
+    font-size: 10px;
+    letter-spacing: 2px;
+    color: #0077C0;
+    background-color: transparent;
+    transform: rotate(45deg);
+    animation: diamondrotate2 750ms ease-out 3000ms forwards, infiniteRotation 9000ms ease-out 6000ms infinite forwards; }
+    .hero .hero__lines .words-1 {
+      display: flex;
+      justify-content: space-between;
+      width: 280px; }
+      .hero .hero__lines .words-1 .words__draw {
+        transform: rotate(0deg);
+        margin-left: 15px; }
+      .hero .hero__lines .words-1 .words__code {
+        transform: rotate(90deg);
+        transform-origin: 35% 200%; }
+    .hero .hero__lines .words-2 {
+      display: flex;
+      justify-content: space-between;
+      width: 280px;
+      align-items: flex-end;
+      height: 265px; }
+      .hero .hero__lines .words-2 .words__play {
+        transform: rotate(270deg);
+        transform-origin: -5% -10%; }
+      .hero .hero__lines .words-2 .words__design {
+        transform: rotate(180deg);
+        transform-origin: 30% 70%; }
+    .hero .hero__lines .words-opacity {
+      opacity: 0;
+      transition: 750ms ease-out;
+      backface-visibility: hidden;
+      animation: wordsOpacity 800ms linear 1600ms forwards; }
+    .hero .hero__lines svg line {
+      stroke-width: 1;
+      stroke: #0077C0;
+      transition: 350ms ease-in; }
+    .hero .hero__lines-top {
+      animation: topMove 350ms ease-out 1300ms forwards; }
+    .hero .hero__lines-bottom {
+      animation: bottomMove 350ms ease-out 1300ms forwards; }
+    .hero .hero__lines-left {
+      animation: leftMove 350ms ease-out 1300ms forwards; }
+    .hero .hero__lines-right {
+      animation: rightMove 350ms ease-out 1300ms forwards; }
   .hero__box1 {
     display: flex;
     justify-content: center;
     align-items: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin-top: -122.5px;
+    margin-left: -122.5px;
     background-color: #1F1F1F;
     width: 245px;
     height: 245px;
@@ -60,7 +190,7 @@
     position: absolute;
     top: 50%;
     left: 50%;
-    margin-top: -90px;
+    margin-top: -100px;
     margin-left: -100px;
     opacity: 0;
     animation: descOpacity 1000ms linear 3750ms forwards, descMove 650ms ease-out 3800ms forwards; }
@@ -82,10 +212,25 @@
       line-height: 22px;
       color: #0077C0; }
     .hero__box2-cta {
-      color: tomato;
+      color: cyan;
       font-family: "Open Sans", sans-serif;
       font-weight: 300;
       font-size: 12px;
       text-transform: uppercase;
       letter-spacing: 2px;
       text-decoration: none; }
+  .hero__cta {
+    display: flex;
+    justify-content: center;
+    align-self: flex-end;
+    width: 235px; }
+    .hero__cta-call {
+      font-size: 10px;
+      font-family: "Open Sans", sans-serif;
+      letter-spacing: 2px;
+      line-height: 20px;
+      text-align: center;
+      margin-bottom: 50px; }
+    @media (min-width: 700px) {
+      .hero__cta {
+        display: none; } }
