--- a/style.scss
+++ b/style.scss
@@ -140,6 +140,7 @@ $merrifont: 'Merriweather', sans-serif;
     }
   }
 }
+
 .hero {
   display: flex;
   justify-content: center;
@@ -147,6 +148,7 @@ $merrifont: 'Merriweather', sans-serif;
   flex-wrap: wrap;
   width: 100%;
   height: 100vh;
+
 
   .hero__lines {
     position: absolute;
@@ -316,6 +318,21 @@ $merrifont: 'Merriweather', sans-serif;
 
     @media (min-width: 700px) {
       display: none;
+    }
+  }
+
+  &__image {
+    display: none;
+
+
+    @media (min-width: 700px) {
+      display: flex;
+      position: absolute;
+      right: -100px;
+      background: url('../assets/self-photo.png');
+      width: 480px;
+      height: 768px;
+      background-repeat: no-repeat;
     }
   }
 }
