--- a/css/style.css
+++ b/css/style.css
@@ -84,6 +84,10 @@
   100% {
     opacity: 1; } }
 
+.page-wrapper {
+  max-width: 1400px;
+  margin: 0 auto; }
+
 .header {
   display: flex;
   width: 100%; }
@@ -106,6 +110,11 @@
   flex-wrap: wrap;
   width: 100%;
   height: 100vh; }
+  @media (min-width: 700px) {
+    .hero {
+      background: url("../assets/self-photo.png");
+      background-repeat: no-repeat;
+      background-position-x: 950px; } }
   .hero .hero__lines {
     position: absolute;
     top: 50%;
@@ -234,14 +243,3 @@
     @media (min-width: 700px) {
       .hero__cta {
         display: none; } }
-  .hero__image {
-    display: none; }
-    @media (min-width: 700px) {
-      .hero__image {
-        display: flex;
-        position: absolute;
-        right: -100px;
-        background: url("../assets/self-photo.png");
-        width: 480px;
-        height: 768px;
-        background-repeat: no-repeat; } }
