--- a/style.scss
+++ b/style.scss
@@ -122,6 +122,11 @@ $merrifont: 'Merriweather', sans-serif;
   100% {opacity: 1}
 }
 
+.page-wrapper {
+  max-width: 1400px;
+  margin: 0 auto;
+}
+
 .header {
   display: flex;
   width: 100%;
@@ -149,6 +154,11 @@ $merrifont: 'Merriweather', sans-serif;
   width: 100%;
   height: 100vh;
 
+  @media (min-width: 700px) {
+    background: url('../assets/self-photo.png');
+    background-repeat: no-repeat;
+    background-position-x: 950px;
+  }
 
   .hero__lines {
     position: absolute;
@@ -318,21 +328,6 @@ $merrifont: 'Merriweather', sans-serif;
 
     @media (min-width: 700px) {
       display: none;
-    }
-  }
-
-  &__image {
-    display: none;
-
-
-    @media (min-width: 700px) {
-      display: flex;
-      position: absolute;
-      right: -100px;
-      background: url('../assets/self-photo.png');
-      width: 480px;
-      height: 768px;
-      background-repeat: no-repeat;
     }
   }
 }
