--- a/css/style.css
+++ b/css/style.css
@@ -132,6 +132,33 @@
     opacity: 1;
     transform: translateY(0px); } }
 
+@keyframes circleToBox {
+  0% {
+    border-radius: 200px;
+    transform: rotate(0); }
+  75% {
+    width: 245px;
+    height: 245px;
+    top: 50%;
+    left: 50%;
+    margin-top: -122.5px;
+    margin-left: -122.5px; }
+  100% {
+    width: 100%;
+    height: 100vh;
+    top: 0;
+    left: 0;
+    margin-top: 0;
+    margin-left: 0;
+    border-radius: 0;
+    transform: rotate(180deg); } }
+
+@keyframes diamondrotateReverse {
+  0% {
+    transform: rotate(180deg); }
+  100% {
+    transform: rotate(0); } }
+
 .page-wrapper {
   max-width: 1400px;
   margin: 0 auto; }
@@ -294,7 +321,7 @@
     transition: 800ms;
     transition-delay: 500ms;
     transition-timing-function: ease-out;
-    animation: diamondrotateReverse 1000ms ease-in; }
+    animation: diamondrotateReverse 1000ms ease-in, circleToBox 1250ms ease-out 1250ms forwards; }
   .hero__nav {
     display: none; }
     @media (min-width: 700px) {
@@ -339,5 +366,5 @@
 
 .web-design {
   width: 100%;
-  height: 768px;
+  height: 100vh;
   background-color: #222222; }
