--- a/style.scss
+++ b/style.scss
@@ -518,7 +518,45 @@ body {
 
 
 .web-design {
+  display: flex;
   width: 100%;
   height: 100vh;
   background-color: #222222;
+
+  &__box{
+    margin-top: 225px;
+    margin-left: 120px;
+
+    &-title {
+      position: relative;
+      top: 50px;
+      margin-left: 30px;
+      font-family: $merrifont;
+      font-weight: bold;
+      font-size: 64px;
+      color: white;
+      letter-spacing: -4px;
+      line-height: 52px;
+    }
+
+    &-link {
+      position: relative;
+      top: 105px;
+      margin-left: 30px;
+      font-family: $merrifont;
+      font-weight: 300;
+      text-decoration: none;
+      color: white;
+      font-size: 18px;
+      -webkit-font-smoothing: antialiased;
+      -moz-font-smoothing: antialiased;
+      -o-font-smoothing: antialiased;
+    }
+
+    svg line {
+      stroke-width: 3px;
+      stroke: white;
+      transition: 350ms ease-in;
+    }
+  }
 }
