--- a/style.scss
+++ b/style.scss
@@ -519,11 +519,13 @@ body {
 
 .web-design {
   display: flex;
+  justify-content: space-between;
   width: 100%;
   height: 100vh;
   background-color: #222222;
 
   &__box{
+    width: 30%;
     margin-top: 225px;
     margin-left: 120px;
 
@@ -557,6 +559,36 @@ body {
       stroke-width: 3px;
       stroke: white;
       transition: 350ms ease-in;
+    }
+  }
+
+  &__images {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    width: 60%;
+
+    &-shadow {
+      position: relative;
+      top: 170px;
+      left: 586px;
+      opacity: .5;
+      z-index: 1;
+    }
+
+    &-jones {
+      margin-right: -270px;
+      z-index: 2;
+    }
+
+    &-verve {
+      margin-right: -155px;
+      z-index: 2;
+    }
+
+    &-beastletics {
+      margin-right: 50px;
+      z-index: 2;
     }
   }
 }
