--- a/css/style.css
+++ b/css/style.css
@@ -185,7 +185,6 @@
   justify-content: center; }
   @media (min-width: 700px) {
     .hero {
-      background: url("../assets/self-photo.png");
       background-repeat: no-repeat;
       background-position-x: 950px;
       justify-content: flex-start; } }
@@ -366,10 +365,15 @@
 
 .web-design {
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-between;
   width: 100%;
-  height: 100vh;
+  height: auto;
   background-color: #222222; }
+  @media (min-width: 700px) {
+    .web-design {
+      flex-wrap: nowrap;
+      height: 100vh; } }
   .web-design__box {
     width: 30%;
     margin-top: 225px;
@@ -384,6 +388,14 @@
       color: white;
       letter-spacing: -4px;
       line-height: 52px; }
+    .web-design:hover .web-design__box-top {
+      transform: translate(236px); }
+    .web-design:hover .web-design__box-right {
+      transform: translateY(272px);
+      transition-delay: 230ms; }
+    .web-design:hover .web-design__box-bottom {
+      transform: translate(-71px);
+      transition-delay: 460ms; }
     .web-design__box-link {
       position: relative;
       top: 105px;
@@ -399,12 +411,16 @@
     .web-design__box svg line {
       stroke-width: 3px;
       stroke: white;
-      transition: 350ms ease-in; }
+      transition: 250ms ease-out; }
   .web-design__images {
     display: flex;
-    justify-content: flex-end;
     align-items: center;
-    width: 60%; }
+    justify-content: center;
+    width: 100%; }
+    @media (min-width: 700px) {
+      .web-design__images {
+        justify-content: flex-end;
+        width: 60%; } }
     .web-design__images-shadow {
       position: relative;
       top: 170px;
