--- a/style.scss
+++ b/style.scss
@@ -269,7 +269,7 @@ body {
   justify-content: center;
 
   @media (min-width: 700px) {
-    background: url('../assets/self-photo.png');
+    // background: url('../assets/self-photo.png');
     background-repeat: no-repeat;
     background-position-x: 950px;
     justify-content: flex-start;
@@ -519,10 +519,16 @@ body {
 
 .web-design {
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-between;
   width: 100%;
-  height: 100vh;
+  height: auto;
   background-color: #222222;
+
+  @media (min-width: 700px){
+    flex-wrap: nowrap;
+    height: 100vh;
+  }
 
   &__box{
     width: 30%;
@@ -539,6 +545,20 @@ body {
       color: white;
       letter-spacing: -4px;
       line-height: 52px;
+    }
+
+    .web-design:hover &-top {
+      transform: translate(236px);
+    }
+
+    .web-design:hover &-right {
+      transform: translateY(272px);
+      transition-delay: 230ms;
+    }
+
+    .web-design:hover &-bottom {
+      transform: translate(-71px);
+      transition-delay: 460ms;
     }
 
     &-link {
@@ -558,15 +578,20 @@ body {
     svg line {
       stroke-width: 3px;
       stroke: white;
-      transition: 350ms ease-in;
+      transition: 250ms ease-out;
     }
   }
 
   &__images {
     display: flex;
-    justify-content: flex-end;
     align-items: center;
-    width: 60%;
+    justify-content: center;
+    width: 100%;
+
+    @media (min-width: 700px ){
+      justify-content: flex-end;
+      width: 60%;
+    }
 
     &-shadow {
       position: relative;
