--- a/style.scss
+++ b/style.scss
@@ -269,7 +269,7 @@ body {
   justify-content: center;
 
   @media (min-width: 700px) {
-    // background: url('../assets/self-photo.png');
+    background: url('../assets/self-photo.png');
     background-repeat: no-repeat;
     background-position-x: 950px;
     justify-content: flex-start;
@@ -520,20 +520,27 @@ body {
 .web-design {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: center;
   width: 100%;
   height: auto;
   background-color: #222222;
+  padding-bottom: 115px;
 
   @media (min-width: 700px){
+    justify-content: space-between;
     flex-wrap: nowrap;
     height: 100vh;
+    padding-bottom: 0;
   }
 
   &__box{
-    width: 30%;
-    margin-top: 225px;
-    margin-left: 120px;
+    display: none;
+    @media (min-width: 700px) {
+      display: block;
+      width: 30%;
+      margin-top: 225px;
+      margin-left: 120px;
+    }
 
     &-title {
       position: relative;
@@ -582,38 +589,141 @@ body {
     }
   }
 
+  &__box2{
+    margin-top: 100px;
+    @media (min-width: 700px) {
+      display: none;
+    }
+
+    &-title {
+      position: relative;
+      top: 25px;
+      left: 34px;
+      font-family: $merrifont;
+      font-weight: bold;
+      font-size: 36px;
+      color: white;
+      letter-spacing: -2px;
+    }
+
+    .web-design:hover &-top {
+      transform: translate(280px);
+    }
+
+    .web-design:hover &-right {
+      transform: translateY(92px);
+      transition-delay: 230ms;
+    }
+
+    .web-design:hover &-bottom {
+      transform: translate(-120px);
+      transition-delay: 460ms;
+    }
+
+    &-link {
+      position: relative;
+      top: 45px;
+      margin-left: 40px;
+      font-family: $merrifont;
+      font-weight: 300;
+      text-decoration: none;
+      color: white;
+      font-size: 18px;
+      -webkit-font-smoothing: antialiased;
+      -moz-font-smoothing: antialiased;
+      -o-font-smoothing: antialiased;
+    }
+
+    svg line {
+      stroke-width: 3px;
+      stroke: white;
+      transition: 250ms ease-out;
+    }
+  }
+
   &__images {
+    margin-top: 85px;
     display: flex;
     align-items: center;
     justify-content: center;
+    flex-wrap: wrap;
     width: 100%;
 
     @media (min-width: 700px ){
+      margin-top: 0;
       justify-content: flex-end;
+      flex-wrap: nowrap;
       width: 60%;
     }
 
     &-shadow {
-      position: relative;
-      top: 170px;
-      left: 586px;
-      opacity: .5;
-      z-index: 1;
+      display: none;
+
+      @media(min-width: 700px){
+        display: block;
+        position: relative;
+        opacity: .5;
+        z-index: 1;
+        top: 170px;
+        left: 586px;
+      }
     }
 
     &-jones {
-      margin-right: -270px;
       z-index: 2;
+      margin-right: -75px;
+
+      @media (min-width: 700px) {
+        margin-right: -270px;
+      }
     }
 
     &-verve {
-      margin-right: -155px;
       z-index: 2;
+      margin-right: -43px;
+
+      @media (min-width: 700px) {
+        margin-right: -155px;
+      }
     }
 
     &-beastletics {
-      margin-right: 50px;
       z-index: 2;
+
+      @media (min-width: 700px) {
+        margin-right: 50px;
+      }
+
+      img {
+        width: 120px;
+
+        @media(min-width: 700px){
+          width: auto;
+        }
+      }
     }
+
+      img {
+        max-width: 150px;
+
+        @media (min-width: 700px) {
+          max-width: none;
+        }
+      }
+    }
+
+  &__shadowmobile {
+      display: flex;
+      justify-content: center;
+      width: 100%;
+      margin-top: -150px;
+
+      @media (min-width: 700px) {
+        display: none;
+      }
+
+      img {
+        width: 300px;
+      }
   }
 }
