--- a/style.scss
+++ b/style.scss
@@ -214,7 +214,7 @@ $merrifont: 'Merriweather', sans-serif;
   }
   100% {
     width: 100%;
-    height: 100vh;
+    height: 110vh;
     top: 0;
     left: 0;
     margin-top: 0;
@@ -234,8 +234,8 @@ $merrifont: 'Merriweather', sans-serif;
   }
 }
 
-body {
-
+html, body {
+  overflow: hidden;
 }
 
 .page-wrapper {
@@ -456,7 +456,7 @@ body {
       transition: 800ms;
       transition-delay: 500ms;
       transition-timing-function: ease-out;
-      animation: diamondrotateReverse 1000ms ease-in, circleToBox 1250ms ease-out 1250ms forwards;
+      animation: diamondrotateReverse 900ms ease-in, circleToBox 1000ms ease-out 900ms forwards;
   }
 
 
@@ -523,7 +523,7 @@ body {
   justify-content: center;
   width: 100%;
   height: auto;
-  background-color: #222222;
+  background-color: #1F1F1F;
   padding-bottom: 115px;
 
   @media (min-width: 700px){
