added illustration section

--- a/css/style.css
+++ b/css/style.css
@@ -159,9 +159,6 @@
   100% {
     transform: rotate(0); } }
 
-html, body {
-  overflow: hidden; }
-
 .page-wrapper {
   max-width: 1400px;
   margin: 0 auto; }
@@ -379,8 +376,9 @@ html, body {
     .web-design {
       justify-content: space-between;
       flex-wrap: nowrap;
+      align-items: center;
       height: 100vh;
-      padding-bottom: 0; } }
+      padding-bottom: 150px; } }
   .web-design__box {
     display: none; }
     @media (min-width: 700px) {
@@ -470,7 +468,7 @@ html, body {
     width: 100%; }
     @media (min-width: 700px) {
       .web-design__images {
-        margin-top: 0;
+        margin-top: 200px;
         justify-content: flex-end;
         flex-wrap: nowrap;
         width: 60%; } }
@@ -521,3 +519,42 @@ html, body {
         display: none; } }
     .web-design__shadowmobile img {
       width: 300px; }
+
+.illustration {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  background-color: #0077C0;
+  padding-top: 100px; }
+  .illustration__image {
+    width: 523px;
+    height: 567px;
+    background-color: black;
+    opacity: .75; }
+  .illustration__box-title {
+    position: relative;
+    width: 136px;
+    top: 60px;
+    left: 50px;
+    font-family: "Merriweather", sans-serif;
+    font-weight: bold;
+    font-size: 64px;
+    color: #C7EEFF;
+    letter-spacing: -4px;
+    line-height: 52px; }
+  .illustration__box-link {
+    position: relative;
+    top: 128px;
+    left: 55px;
+    font-family: "Merriweather", sans-serif;
+    font-weight: 300;
+    text-decoration: none;
+    color: #C7EEFF;
+    font-size: 18px;
+    -webkit-font-smoothing: antialiased;
+    -moz-font-smoothing: antialiased;
+    -o-font-smoothing: antialiased; }
+  .illustration__box svg line {
+    stroke-width: 3px;
+    stroke: white;
+    transition: 250ms ease-out; }
